[package]
name = "pi-stimate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#egui = "0.18.1"
eframe = "0.18.0"
rand = "0.8.5"

[profile.release]
overflow-checks = true
opt-level = 3
strip = true
debug-assertions = false
lto = true

[profile.dev]
opt-level = 0
lto = false